# llm-cost-meter

./: .gitignore  README.md  pyproject.toml
bench/: overhead.py  overhead_results.json
examples/: demo.py  docker-compose.yml  prometheus.yml
examples/grafana/dashboards/: llm_cost_meter.json
examples/grafana/provisioning/dashboards/: default.yml
src/llm_cost_meter/: __init__.py  metrics.py  pricing.py  wrap.py
tests/: conftest.py  test_pricing.py  test_wrap.py
